--- a/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -1,1 +1,9 @@
-<p>nav-bar works!</p>
+<div class="container">
+    <div class="logo">
+        <img src="../../../../assets/imgs/logo.png" alt="logo" srcset="">
+    </div>
+    <div class="btns">
+        <button type="button" class="currency-details">EUR-USD Details</button>
+        <button type="button" class="currency-details">EUR-GBP Details</button>
+    </div>
+</div>
