--- a/src/app/components/historical-rate-chart/historical-rate-chart.component.html
+++ b/src/app/components/historical-rate-chart/historical-rate-chart.component.html
@@ -1,1 +1,39 @@
-<p>historical-rate-chart works!</p>
+<!-- <div class="currency-exchanger">
+    <div class="title-container">
+        <h2 class="title">Currency Details</h2>
+        <button type="button" routerLink="">Back to Home</button>
+    </div>
+    <div class="container">
+        <div class="data-entry">
+            <div class="amount-exchange">
+                <label for="amount"></label>
+                <input type="number" name="amount" />
+            </div>
+            <div class="from-currency">
+                <label for="amount"></label>
+                <input type="number" name="amount" />
+            </div>
+            <div class="to-currency">
+                <label for="amount"></label>
+                <input type="number" name="amount" />
+            </div>
+        </div>
+        <div class="convert-btn__container">
+            <button type="button">Convert</button>
+        </div>
+        <div class="data-output">
+            <div class="default-exchange">
+                <input type="number" name="amount" disabled />
+            </div>
+            <div class="amount-exchange">
+                <input type="text" disabled />
+            </div>
+        </div>
+    </div>
+    <div class="historical-rates--chart_container">
+        <div class="historical-rates--chart">
+        </div>
+    </div>
+</div> -->
+
+<h1>Hello</h1>
