--- a/src/app/components/historical-rate-chart/historical-rate-chart.component.html
+++ b/src/app/components/historical-rate-chart/historical-rate-chart.component.html
@@ -1,32 +1,36 @@
-<!-- <div class="currency-exchanger">
+<div class="historical-rate-container">
     <div class="title-container">
         <h2 class="title">Currency Details</h2>
         <button type="button" routerLink="">Back to Home</button>
     </div>
-    <div class="container">
+    <div class="data-container">
         <div class="data-entry">
             <div class="amount-exchange">
-                <label for="amount"></label>
-                <input type="number" name="amount" />
+                <label for="amount">Amount</label>
+                <input type="text" class="amount" [(ngModel)]="currenciesModel.amount" placeholder="0.00" />
             </div>
             <div class="from-currency">
-                <label for="amount"></label>
-                <input type="number" name="amount" />
+                <label for="from">From</label>
+                <ng-select [items]="currencies" bindLabel="key" bindValue="key" [searchable]="true" [multiple]="false"
+                    [clearable]="true" [(ngModel)]="currenciesModel.fromCurrency"></ng-select>
             </div>
             <div class="to-currency">
-                <label for="amount"></label>
-                <input type="number" name="amount" />
+                <label for="to">To</label>
+                <ng-select [items]="currencies" bindLabel="key" bindValue="key" [searchable]="true" [multiple]="false"
+                    [clearable]="true" [(ngModel)]="currenciesModel.toCurrency"></ng-select>
             </div>
-        </div>
-        <div class="convert-btn__container">
-            <button type="button">Convert</button>
         </div>
         <div class="data-output">
             <div class="default-exchange">
-                <input type="number" name="amount" disabled />
+                <input type="text" name="defaultValue" [(ngModel)]="currenciesModel.defaultValue" disabled />
             </div>
             <div class="amount-exchange">
-                <input type="text" disabled />
+                <input type="text" name="valueWithAmount" [(ngModel)]="currenciesModel.valueWithAmount" disabled />
+            </div>
+            <div class="more-details__btn">
+                <button type="button" (click)="convertCurrency()" [disabled]="!currenciesModel.amount">
+                    Convert
+                </button>
             </div>
         </div>
     </div>
@@ -34,6 +38,4 @@
         <div class="historical-rates--chart">
         </div>
     </div>
-</div> -->
-
-<h1>Hello</h1>
+</div>
