--- a/src/app/components/currency-exchanger/currency-exchanger.component.scss
+++ b/src/app/components/currency-exchanger/currency-exchanger.component.scss
@@ -85,7 +85,7 @@ label {
     justify-content: stretch;
     // justify-items: stretch;
     // align-items: stretch;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     // // grid-template-rows: 1fr 1fr 1fr;
 
 
