--- a/src/app/components/currency-exchanger/currency-exchanger.component.scss
+++ b/src/app/components/currency-exchanger/currency-exchanger.component.scss
@@ -104,3 +104,7 @@ label {
         justify-content: space-between;
     }
 }
+
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
