--- a/src/app/components/historical-rate-chart/historical-rate-chart.component.html
+++ b/src/app/components/historical-rate-chart/historical-rate-chart.component.html
@@ -7,7 +7,7 @@
         <div class="data-entry">
             <div class="amount-exchange">
                 <label for="amount">Amount</label>
-                <input type="text" class="amount" [(ngModel)]="currenciesModel.amount" placeholder="0.00" />
+                <input type="number" class="amount" [(ngModel)]="currenciesModel.amount" placeholder="0.00" />
             </div>
             <div class="from-currency">
                 <label for="from">From</label>
