--- a/src/app/components/historical-rate-chart/historical-rate-chart.component.scss
+++ b/src/app/components/historical-rate-chart/historical-rate-chart.component.scss
@@ -81,3 +81,7 @@ label, input, ng-select {
 label {
     padding-left: 1rem;
 }
+
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
